@@ -128,9 +128,12 @@ gras_datadesc_init(void) {
 				       e_gras_dd_scalar_encoding_float, 
 				       NULL,&ddt));
 
-  TRYFAIL(gras_datadesc_declare_array_dyn("string", 
+  TRYFAIL(gras_datadesc_declare_array_dyn("char[]", 
 					  gras_datadesc_by_name("char"), 
 					  _strlen_cb,&ddt));
+  TRYFAIL(gras_datadesc_declare_ref("string", 
+				    gras_datadesc_by_name("char[]"), 
+				    &ddt));
 
 }
 
